--- a/src/core-one/domain-3/3-2.md
+++ b/src/core-one/domain-3/3-2.md
@@ -4,3 +4,6 @@ RAM (Random-Access Memory) is a form of memory for computers to read and store d
 
 Not all RAM look the same however. Different types of RAM exist for different systems. For example, SODIMMs are the type of RAM commonly found in laptops for their small form factor.
 Different types of RAM can be told apart by their shape and notch position.
+
+## SODIMM
+SODIMMs are a RAM form factor found within most laptops.
